--- a/components/HeaderComponent/HeaderComponent.module.scss
+++ b/components/HeaderComponent/HeaderComponent.module.scss
@@ -102,12 +102,10 @@
 
     }
     img{
-
-      position: relative;
-      border: 18px solid #0E0E52;
-      box-sizing: border-box;
-      min-height: 428px;
-      width: 90%;
+      margin: 20px 20px 40px 20px !important;
+      border: 18px solid #0E0E52 !important;
+      min-height: 428px !important;
+      width: 90% !important;
 
     }
   }
