--- a/components/Offer/Offer.module.scss
+++ b/components/Offer/Offer.module.scss
@@ -39,6 +39,7 @@ width: 280px;
       flex-direction: row;
       padding-bottom: 150px;
       padding-left: 16px;
+      max-width: 280px;
 
       .empty{
         width: 280px;
