--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,7 @@ body{
 .button-block--right{
     position: absolute;
     bottom: 57%;
-    right: 25px;
+    right: -22px;
     transition: all 0.9s;
 }
 .arrow--disabled{
